# mtv_cli

./: .gitignore  Dockerfile  README.md  mtv_cfg.py  mtv_cli.py  mtv_const.py  mtv_download.py  mtv_filmdb.py  mtv_filminfo.py  pyproject.toml  setup.cfg
configurations/: mtv-cli.cfg  mtv_cli.conf  mtv_web.service
debian/: README.md  changelog  control  copyright  mtvclient.1  mtvclient.README.Debian  mtvclient.config  mtvclient.examples  mtvclient.install  mtvclient.lintian-overrides  mtvclient.manpages  mtvclient.templates  mtvclient.ucf  mtvweb.1  postinst  postrm  preinst  rules
debian/user/: mtvdownload.service  mtvdownload.timer  mtvupdate.service  mtvupdate.timer
docker/: entrypoint  update-download-loop
files/etc/: mtv_cli.conf  mtv_sendinforc
files/usr/local/lib/mtv_cli/web/: content_dateien.tpl  content_filme.tpl  content_liste.tpl  content_status.tpl  content_suche.tpl  index.html  menu.tpl
files/usr/local/lib/mtv_cli/web/js/: utils.js
src/mtv_cli/: cli.py  constants.py  content_retrieval.py  film.py  film_filter.py  mtv_cli.py  mtv_const.py  mtv_download.py  mtv_filmdb.py  mtv_filminfo.py  mtv_msg.py  mtv_web.py  storage_backend.py  webserver.py
tools/: erstelle-cronregeln  install-mtv_cli
webserver/: content_liste.tpl  index.html  menu.tpl
webserver/css/: datatables.min.css  styles.css
webserver/js/: datatables.min.js  jquery.qtip.min.js
